--- a/vault/files/vault.upstart.jinja
+++ b/vault/files/vault.upstart.jinja
@@ -18,7 +18,7 @@ script
 {%- if vault.dev_mode %}
     -dev \
 {% else %}
-    -config="/etc/vault/config/server.hcl" \
+    -config="/etc/vault/config.d/config.json" \
 {% endif -%}
     >>/var/log/vault.log 2>&1
 end script
